--- a/css.css
+++ b/css.css
@@ -1,37 +1,86 @@
 body{
     box-sizing: border-box;
+    font-family: cursive;
+    background-color: #eca661;
+}
+
+h2{
+    text-align: center;
+    color: darkgray;
+    font-weight: bold;
 }
 
 #depenses{
+    border: darkgray 1px solid;
+    width: 150px;
     display: flex;
     flex-direction: column;
-    margin-left: 10%;
+    margin-left: 42%;
+
 }
 
 #recettes{
-    border: 1px solid black;
+    border: darkgray 1px solid;
+    width: 150px;
     display: flex;
     flex-direction: column;
-    margin-left: 35%;
-    margin-top: -7%;
+    margin-left: 42%;
+    margin-top: 5%;
 }
 
-#epargne{
-    display: flex;
-    flex-direction: column;
-    margin-left: 60%;
-    margin-top: -5%;
-}
 
-#contenu2{
-    margin-top: -11%;
-}
 
 #total-depenses{
-    width: 100px;
-    text-align: left;
+    width: 60px;
+    text-align: center;
+    margin-left: 27%;
+    margin-top: 5%;
+    background-color: darkgray;
+    border-radius: 10%;
+    font-family: cursive;
 }
+
 #total-recettes{
-    width: 100px;
-    text-align: left;
+    width: 60px;
+    text-align: center;
+    margin-left: 27%;
+    margin-top: 5%;
+    background-color: darkgray;
+    border-radius: 10%;
+    font-family: cursive;
+}
+
+#totalcharge{
+    margin-left: 12%;
+}
+
+
+#totalrecettes{
+    margin-left: 12%;
+}
+
+label{
+    color: grey;
+    font-weight: bold;
+}
+
+#résultat{
+    margin-top: -30%;
+}
+
+#reset{
+    background-color: darkgray;
+    border-radius: 10%;
+    font-family: cursive;
+}
+
+
+#total-budget{
+    background-color: darkgray;
+    border-radius: 10%;
+    font-family: cursive;
+}
+
+input{
+    background-color: #eca661;
 }
